<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCD9C8"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/results_child_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|start"
            android:text="@string/results_child_type_default" />

        <TextView
            android:id="@+id/results_child_powtough"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|end"
            android:text="@string/results_child_pow_tough_default" />

    </LinearLayout>

    <TextView
        android:id="@+id/results_child_rules"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/results_child_rules_default" />

    <TextView
        android:id="@+id/results_child_total"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/results_child_total_default" />

    <TextView
        android:id="@+id/results_child_sets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/results_child_sets_default" />

    <TextView
        android:id="@+id/results_child_watermark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/results_child_watermark_default" />

    <TextView
        android:id="@+id/results_child_link"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/results_child_link_default" />

</LinearLayout>
